{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 27,
  "lineage": "a6bee7a1-32f5-a6b1-6cb2-d76edfc2061b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "abhi_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557690591725:internet-gateway/igw-07b5b5ffa34a47a75",
            "id": "igw-07b5b5ffa34a47a75",
            "owner_id": "557690591725",
            "region": "us-east-1",
            "vpc_id": "vpc-02a1778033f843ab6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.abhi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557690591725:route-table/rtb-0faada723b3d7f880",
            "id": "rtb-0faada723b3d7f880",
            "owner_id": "557690591725",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b5b5ffa34a47a75",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02a1778033f843ab6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "557690591725",
            "id": "rtb-0faada723b3d7f880",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.abhi_ig",
            "aws_vpc.abhi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "abhi_public_subnet_01_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020c36891d520f7eb",
            "region": "us-east-1",
            "route_table_id": "rtb-0faada723b3d7f880",
            "subnet_id": "subnet-0c39bc17597299a20"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "557690591725",
            "id": "rtbassoc-020c36891d520f7eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.abhi_ig",
            "aws_route_table.public_RT",
            "aws_subnet.public_subnet_01",
            "aws_vpc.abhi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "abhi_public_subnet_02_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f564cbb8a7c76c7f",
            "region": "us-east-1",
            "route_table_id": "rtb-0faada723b3d7f880",
            "subnet_id": "subnet-04532abd2ac36b929"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "557690591725",
            "id": "rtbassoc-0f564cbb8a7c76c7f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.abhi_ig",
            "aws_route_table.public_RT",
            "aws_subnet.public_subnet_02",
            "aws_vpc.abhi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "abhi_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557690591725:security-group/sg-0377c17afdb6f32de",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0377c17afdb6f32de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "abhi_sg",
            "name_prefix": "",
            "owner_id": "557690591725",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "abhi_sg"
            },
            "tags_all": {
              "Name": "abhi_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a1778033f843ab6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "557690591725",
            "id": "sg-0377c17afdb6f32de",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.abhi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557690591725:subnet/subnet-0c39bc17597299a20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c39bc17597299a20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557690591725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public_Subnet_01"
            },
            "tags_all": {
              "Name": "Public_Subnet_01"
            },
            "vpc_id": "vpc-02a1778033f843ab6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "557690591725",
            "id": "subnet-0c39bc17597299a20",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.abhi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557690591725:subnet/subnet-04532abd2ac36b929",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04532abd2ac36b929",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557690591725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public_Subnet_02"
            },
            "tags_all": {
              "Name": "Public_Subnet_02"
            },
            "vpc_id": "vpc-02a1778033f843ab6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "557690591725",
            "id": "subnet-04532abd2ac36b929",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.abhi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "abhi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557690591725:vpc/vpc-02a1778033f843ab6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc3069658ab5253e",
            "default_route_table_id": "rtb-08a8676b5638e5e49",
            "default_security_group_id": "sg-0ef1b2c06feb07e02",
            "dhcp_options_id": "dopt-0aff342fc9996374d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a1778033f843ab6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a8676b5638e5e49",
            "owner_id": "557690591725",
            "region": "us-east-1",
            "tags": {
              "Name": "Abhi_VPC"
            },
            "tags_all": {
              "Name": "Abhi_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "557690591725",
            "id": "vpc-02a1778033f843ab6",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}